Added option to pass mult ot job inline, added it everywhere till we get default arguments. Reworked hired jobs to use modifiers for easier work with them. Reworked consumer good policy to old behaviour and added a helpful inline

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -309,5 +309,6 @@ languages:
       # Fake categories
 
       planet_industrial_jobs: [ '$tec_loc_industrial_jobs$', job ]
+      planet_jobs_hired: [ '£job£ $private_hired$ Jobs', job ]
 
 
