Branch office capitals and buildings refactor

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -134,8 +134,8 @@ languages:
       planet_buildings_strongholds: [ 'Fortress', structure ]
       planet_buildings_bastions: [ 'Bastion', structure ]
 
-      planet_branch_offices: [ '$BRANCH_OFFICE_BUILDINGS$', branch_office ]
-      planet_branch_office_buildings: [ 'Branch Office', branch_office ]
+      planet_branch_offices: ['Branch Office' , branch_office ]
+      planet_branch_office_buildings: [ '$BRANCH_OFFICE_BUILDINGS$', branch_office ]
 
       planet_districts: [ '$planet_districts$', structure ]
       planet_districts_cities: [ '$planet_districts_cities$', structure ]
@@ -226,6 +226,7 @@ languages:
       planet_chemists: [ '£job_chemist£ $job_chemist_plural$', job ]
       planet_artisans: [ '£job_artisan£ [GetArtisan]', job ]
 
+      planet_criminals: [ '£job_criminal£ [GetCriminal]', job ]
       planet_clerks: [ '£job_clerk£ $job_clerk_plural$', job ]
       planet_tec_free_agents: [ '$planet_tec_free_agents$', job ]
       planet_tec_integrated: [ 'planet_tec_integrated', job ]
