Added economic categories for arcology decisions

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -111,6 +111,10 @@ languages:
         resource_produces: "{category} {resource} Gain"
         resource_upkeep: "{category} {resource} Upkeep"
       operations: *army
+      decisions:
+        generic_cost: "{category} Cost"
+        resource_cost: "{category} {resource} Cost"
+
     economic_categories:
       stations: ['Orbital Stations', generic]
       station_gatherers: ['Mining Station', structure]
@@ -311,5 +315,10 @@ languages:
 
       planet_industrial_jobs: [ '$tec_loc_industrial_jobs$', job ]
       planet_jobs_hired: [ '£job£ $private_hired$ Jobs', job ]
+
+      decisions: ["Decisions", decisions]
+      decisions_arcologies: ["Arcology Decisions", decisions]
+      decisions_ecoworld: ["Ecoworld Decisions", decisions]
+      decisions_ecu: ["Ecumenopolis Decisions", decisions]
 
 
