--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -181,7 +181,7 @@ languages:
       planet_jobs_latent_psionic: [ '§MLatent Psionic§! Pop £job£ Jobs', job_archetype ]
       planet_psionic_jobs: [ '§MPsionic§! Pop £job£ Jobs', job_archetype ]
       planet_cyborg_jobs: [ '§BCyborg§! Pop £job£ Jobs', job_archetype ]
-      planet_jobs_tec_cybernetics: [ '§BCybernetic§! Pop £job£ Jobs', job_archetype ]
+      planet_jobs_tec_cybernetics: [ '§ECyborg§! and §BRobot§! Pop £job£ Jobs', job_archetype ]
       planet_jobs_tec_purelinked: [ '§YEmbroided§! Pop £job£ Jobs', job_archetype ]
       planet_jobs_tec_converged: [ '§YConverged§! Pop £job£ Jobs', job_archetype ]
 
@@ -196,7 +196,7 @@ languages:
       planet_pops_lithoids: [ 'Lithoid £pop£ Pops', pop ]
       planet_pops_bioservant: [ '§GBioservant§! £pop£ Pops', pop ]
       planet_pops_replicant: [ '§BReplicant§! £pop£ Pops', pop ]
-      planet_pops_tec_cybernetics: [ '§BCybernetic§! Pops', pop ]
+      planet_pops_tec_cybernetics: [ '§ECyborg§! and §BRobot§! £pop£ Pops', pop ]
       planet_pops_biosynth: [ '§BBio-synth§! Pops', pop ]
 
       planet_bio_trophies: [ '£job_bio_trophy£ $pop_cat_bio_trophy_plural$', job ]
