--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -18,10 +18,12 @@ resources:
   - nanites
   - minor_artifacts
   # Fake resources
-  - [amenities, "£amenities£ $PLANET_AMENITIES_TITLE$", [produces_add, upkeep_add]]
-  - [stability, "£stability£ $PLANET_STABILITY_TITLE$", [produces_add]]
-  - [trade_value, "£trade_value£ $TRADE_VALUE$", [produces_add]]
-  - [pop_growth, "£mod_pop_growth_speed£ Pop Growth", [produces_add]]
+  - [amenities, "$tec_loc_amenities$", [produces_add]]
+  - [stability, "$tec_loc_stability$", [produces_add]]
+  - [trade_value, "$tec_loc_trade_value$", [produces_add]]
+  - [pop_growth, "$tec_loc_pop_grwoth$", [produces_mult]]
+  - [biological_assembly, "$tec_loc_biological_assembly$", [produces_add, produces_mult]]
+  - [assembly, "$tec_loc_assembly$", [produces_add, produces_mult]]
   - [all_research, "$tec_loc_research_resources$"]
   - [all_industrial, "$tec_loc_industrial_resources$"]
   - [all_basic, "$tec_loc_basic_resources$"]
@@ -66,12 +68,12 @@ languages:
       pop:
         generic_produces: "{category} Output"
         generic_upkeep: "{category} Upkeep"
-        resource_produces: "{resource} form {category}"
+        resource_produces: "{resource} from {category}"
         resource_upkeep: "{category} {resource} Upkeep"
       pop_category:
         generic_produces: "{category} Output"
         generic_upkeep: "{category} Upkeep"
-        resource_produces: "{resource} form {category}"
+        resource_produces: "{resource} from {category}"
         resource_upkeep: "{resource} Upkeep for {category}"
       generic_on:
         generic_produces: "Resources from {category} on {0}"
