Some new economic categories for livestock jobs, new scripted modifiers for assembly localization in case of assembly disabling, fixed assembly rules and gene modding of cyborg traits on advanced cyborgs (T-0650/T-0651)

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -240,11 +240,17 @@ languages:
       planet_clerks: [ '£job_clerk£ $job_clerk_plural$', job ]
       planet_tec_free_agents: [ '$planet_tec_free_agents$', job ]
       planet_tec_integrated: [ 'planet_tec_integrated', job ]
-      planet_livestock: [ '£job_livestock£ §Y$job_livestock_plural$§!', job ]
+      
       planet_tec_network_drones: [ '£job_tec_network_drone£ $job_tec_network_drone_plural$', job ]
       planet_maintenancedrones: [ '£job_maintenance_drone£ $job_maintenance_drone_plural$', job ]
       planet_bureaucrats: ['£job_bureaucrat£ $job_bureaucrat_plural$', job]
       planet_coordinators: ['£job_coordinator£ $job_coordinator_plural$', job]
+
+      planet_livestock: [ '£job_livestock£ $job_livestock_plural$', job ]
+      planet_livestock_biological: [ '£job_livestock£ Biological $job_livestock_plural$', job ]
+      planet_livestock_lithoid: ['£job_livestock£ Lithoid $job_livestock_plural$', job]
+
+      planet_tec_batteries: [ '£job_organic_battery£ $job_organic_battery_plural$', job ]
 
       pop_category_purge: [ 'Purged Pops', pop_category ]
       pop_category_robot: [ 'Robotic Servants', pop_category ]
