Placeholders and minor fixes from logs

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -56,7 +56,9 @@ languages:
         resource_upkeep: "{resource} Upkeep of {category} on {0}"
       job_strata:
         generic_produces: "{category} Output"
+        generic_upkeep: "{category} Upkeep"
         resource_produces: "{resource} from {category}"
+        resource_upkeep: "{resource} Upkeep of {category}"
       job_archetype:
         generic_produces: "{category} Output"
         resource_produces: "{category} {resource} Output"
@@ -116,6 +118,7 @@ languages:
       decisions:
         generic_cost: "{category} Cost"
         resource_cost: "{category} {resource} Cost"
+      megastructure: *structure
 
     economic_categories:
       stations: ['Orbital Stations', generic]
@@ -125,6 +128,8 @@ languages:
       station_observer_missions: ['Observation Missions', generic]
       starbases: ['Starbase', structure]
       starbase_stations: ['Starbase', structure]
+      megastructures_habitat: ['Habitat', megastructure]
+      tec_protoworlds: ['Habitat', megastructure]
 
       starbase_constructions: ['Starbase Constructions', starbase_construction]
       starbase_buildings: ['Starbase Buildings', starbase_construction]
@@ -238,13 +243,13 @@ languages:
 
       planet_criminals: [ '£job_criminal£ [GetCriminal]', job ]
       planet_clerks: [ '£job_clerk£ $job_clerk_plural$', job ]
+      planet_tec_trade_drones: [ '£job_tec_trade_drone£ $job_tec_trade_drone_plural$', job ]
       planet_tec_free_agents: [ '$planet_tec_free_agents$', job ]
       planet_tec_integrated: [ 'planet_tec_integrated', job ]
+
       
       planet_tec_network_drones: [ '£job_tec_network_drone£ $job_tec_network_drone_plural$', job ]
       planet_maintenancedrones: [ '£job_maintenance_drone£ $job_maintenance_drone_plural$', job ]
-      planet_bureaucrats: ['£job_bureaucrat£ $job_bureaucrat_plural$', job]
-      planet_coordinators: ['£job_coordinator£ $job_coordinator_plural$', job]
 
       planet_livestock: [ '£job_livestock£ $job_livestock_plural$', job ]
       planet_livestock_biological: [ '£job_livestock£ Biological $job_livestock_plural$', job ]
