Fixed growth loc typo

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -21,7 +21,7 @@ resources:
   - [amenities, "$tec_loc_amenities$", [produces_add]]
   - [stability, "$tec_loc_stability$", [produces_add]]
   - [trade_value, "$tec_loc_trade_value$", [produces_add]]
-  - [pop_growth, "$tec_loc_pop_grwoth$", [produces_mult]]
+  - [pop_growth, "$tec_loc_pop_growth$", [produces_mult]]
   - [biological_assembly, "$tec_loc_biological_assembly$", [produces_add, produces_mult]]
   - [assembly, "$tec_loc_assembly$", [produces_add, produces_mult]]
   - [all_research, "$tec_loc_research_resources$"]
