Updated scripted locs of priests

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -225,13 +225,12 @@ languages:
       planet_metallurgists: [ '£job_foundry£ [GetAlloyProducerPlural]', job ]
       planet_culture_workers: [ '£job_culture_worker£ $job_culture_worker_plural$', job ]
       planet_evaluators: [ '£job_evaluator£ $job_evaluator_plural$', job ]
-      planet_synapse_drones: [ 'job_synapse_drone£ $job_synapse_drone_plural$', job ]
       planet_nobles: [ '£job_noble£ $job_noble_plural$', job ]
       planet_necro_apprentices: [ '£job_necro_apprentice£ $job_necro_apprentice_plural$', job ]
       planet_merchants: [ '£job_merchant£ $job_merchant_plural$', job ]
       planet_entertainers: [ '£job_entertainer£ $job_entertainer_plural$', job ]
       planet_soldiers: [ '£job_soldier£ $job_soldier_plural$', job ]
-      planet_priests: [ '£job_priest£ $job_priest_plural$', job ]
+      planet_priests: [ '$job_priest_name_plural_with_icon$', job ]
       planet_enforcers: [ '£job_enforcer£ $job_enforcer_plural$', job ]
       planet_telepaths: [ '£job_telepath£ $job_telepath_plural$', job ]
       planet_doctors: [ '£job_healthcare£ $job_healthcare_plural$', job ]
