--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -179,6 +179,7 @@ languages:
       planet_jobs_ruler: [ "$pop_cat_ruler$ Pop £job£ Jobs", job_strata ]
       planet_jobs_simple_drone: [ "$pop_cat_simple_drone$ Pop £job£ Jobs", job_strata ]
       planet_jobs_complex_drone: [ "$pop_cat_complex_drone$ Pop £job£ Jobs", job_strata ]
+      planet_jobs_complex_and_simple_drone: [ "$pop_cat_complex_drone$ Drone Pop £job£ Jobs", job_strata ]
 
       planet_jobs_robotic: [ "§BRobot§! Pop £job£ Jobs", job_archetype ]
       planet_jobs_organics: [ "§YOrganic§! Pop £job£ Jobs", job_archetype ]
@@ -265,6 +266,11 @@ languages:
       pop_category_specialists: [ '$SPECIALISTS$', pop_category ]
       pop_category_rulers: [ '$RULERS$', pop_category ]
       pop_category_tec_free_agent: [ '$planet_tec_free_agents$', pop_category ]
+
+      pop_category_normal_resources: [ '£pop£ Pops', pop_category ]
+      pop_category_purge_resources: [ 'Purged £pop£ Pops', pop_category ]
+      pop_category_assimilation_resources: [ 'Assimilated £pop£ Pops', pop_category ]
+      pop_category_non_slave_resources: ['Non-Slave £pop£ Pops', pop_category]
 
       unemployment_resources: ['$UNEMPLOYED_POPS$', job]
 
