Ai baits for capitals, assembly buildings and such, adjusted production buildings, adjusted ai budgets to allow upgrading of habitats, sidereal arcologies and re engineering.

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -119,6 +119,9 @@ languages:
         generic_cost: "{category} Cost"
         resource_cost: "{category} {resource} Cost"
       megastructure: *structure
+      building_generic:
+        build_speed: "{building} Build Speed"
+        max_add: "{building} Max"
 
     economic_categories:
       stations: ['Orbital Stations', generic]
@@ -340,5 +343,33 @@ languages:
       decisions_arcologies: ["Arcology Decisions", decisions]
       decisions_ecoworld: ["Ecoworld Decisions", decisions]
       decisions_ecu: ["Ecumenopolis Decisions", decisions]
+
+    districts_and_buildings:
+      district_tec_hab_arcology_industry: ["$district_tec_hab_arcology_industry$", building_generic]
+      district_tec_hab_arcology_maintenance: ["$district_tec_hab_arcology_maintenance$", building_generic]
+      district_tec_hab_arcology_leisure: ["$district_tec_hab_arcology_leisure$", building_generic]
+      district_tec_hab_arcology_trade: ["$district_tec_hab_arcology_trade$", building_generic]
+      district_tec_hab_arcology_research: ["$district_tec_hab_arcology_research$", building_generic]
+      building_stronghold: ["$building_stronghold$", building_generic]
+      building_tec_dread_stronghold: ["$building_tec_dread_stronghold$", building_generic]
+      building_tec_naval_academy: ["$building_tec_naval_academy$", building_generic]
+      building_tec_naval_gestalt: ["$building_tec_naval_gestalt$", building_generic]
+      district_tec_hab_arcology_foundry: ["$district_tec_hab_arcology_foundry$", building_generic]
+      district_generator_uncapped: ["$district_generator_uncapped$", building_generic]
+      district_tec_aqua_generator: ["$district_tec_aqua_generator$", building_generic]   
+      district_tec_decadent_generator: ["$district_tec_decadent_generator$", building_generic]      
+      district_tec_eco_generator: ["$district_tec_eco_generator$", building_generic]      
+      district_tec_eco_aqua_generator: ["$district_tec_eco_aqua_generator$", building_generic]
+      district_mining_uncapped: ["$district_mining_uncapped$", building_generic]
+      district_tec_aqua_mining: ["$district_tec_aqua_mining$", building_generic]   
+      district_tec_decadent_mining: ["$district_tec_decadent_mining$", building_generic]      
+      district_tec_eco_mining: ["$district_tec_eco_mining$", building_generic]      
+      district_tec_eco_aqua_mining: ["$district_tec_eco_aqua_mining$", building_generic]
+      district_farming_uncapped: ["$district_farming_uncapped$", building_generic]
+      district_tec_aqua_farming: ["$district_tec_aqua_farming$", building_generic]   
+      district_tec_decadent_farming: ["$district_tec_decadent_farming$", building_generic]      
+      district_tec_eco_farming: ["$district_tec_eco_farming$", building_generic]      
+      district_tec_eco_aqua_farming: ["$district_tec_eco_aqua_farming$", building_generic]
+      district_tec_arcology_research: ["$district_tec_arcology_research$", building_generic]
 
 
