Amenities building fix and autogenerated locs

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -257,9 +257,11 @@ languages:
       planet_clerks: [ '£job_clerk£ $job_clerk_plural$', job ]
       planet_tec_trade_drones: [ '£job_tec_trade_drone£ $job_tec_trade_drone_plural$', job ]
       planet_tec_free_agents: [ '$planet_tec_free_agents$', job ]
-      planet_tec_integrated: [ 'planet_tec_integrated', job ]
+      planet_tec_integrated: [ '$planet_tec_integrated$', job ]
 
-      
+      planet_jobs_tec_prime_drone: [ '£job£ §BPrime Drones§!', job ]
+      planet_jobs_tec_brood_drone: [ '£job£ HBrood Drones§!', job ]
+
       planet_tec_network_drones: [ '£job_tec_network_drone£ $job_tec_network_drone_plural$', job ]
       planet_maintenancedrones: [ '£job_maintenance_drone£ $job_maintenance_drone_plural$', job ]
 
@@ -381,4 +383,11 @@ languages:
       district_tec_eco_aqua_farming: ["$district_tec_eco_aqua_farming$", building_generic]
       district_tec_arcology_research: ["$district_tec_arcology_research$", building_generic]
 
+      building_tec_energrid_1: ["$building_tec_energrid_1$", building_generic]
+      building_tec_stripmine_1: ["$building_tec_stripmine_1$", building_generic]
+      building_hydroponics_farm: ["$building_hydroponics_farm$", building_generic]
+      building_stronghold: ["$building_stronghold$", building_generic]
+      building_tec_dread_stronghold: ["$building_tec_dread_stronghold$", building_generic]
+      building_tec_naval_academy: ["$building_tec_naval_academy$", building_generic]
+      building_tec_naval_gestalt: ["$building_tec_naval_gestalt$", building_generic]
 
