Loc purge and cleanup, more concepts

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -384,6 +384,14 @@ languages:
       district_tec_eco_farming: ["$district_tec_eco_farming$", building_generic]      
       district_tec_eco_aqua_farming: ["$district_tec_eco_aqua_farming$", building_generic]
       district_tec_arcology_research: ["$district_tec_arcology_research$", building_generic]
+      district_hab_housing: ["$district_hab_industrial$", building_generic]
+      district_hab_industrial: ["$district_hab_industrial$", building_generic]
+      district_tec_hab_food: ["$district_tec_hab_food$", building_generic]
+      district_hab_energy: ["$district_hab_energy$", building_generic]
+      district_hab_mining: ["$district_hab_mining$", building_generic]
+      district_hab_science: ["$district_hab_science$", building_generic]
+      district_hab_commercial: ["$district_hab_commercial$", building_generic]
+      district_hab_cultural: ["$district_hab_commercial$", building_generic]
 
       building_tec_energrid_1: ["$building_tec_energrid_1$", building_generic]
       building_tec_stripmine_1: ["$building_tec_stripmine_1$", building_generic]
