Ai auth work, scripted modifiers for leaders, adjusted events and trait checks a bit

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -17,6 +17,7 @@ resources:
   - sr_dark_matter
   - nanites
   - minor_artifacts
+  - sr_tec_ai_power
   # Fake resources
   - [amenities, "$tec_loc_amenities$", [produces_add]]
   - [stability, "$tec_loc_stability$", [produces_add]]
@@ -109,6 +110,11 @@ languages:
         resource_produces: "Monthly {resource}"
         resource_upkeep: "Monthly {resource} Upkeep"
         resource_cost: "Empire {resource} Costs"
+      power_projection:
+        generic_produces: "$country_power_projection$ Bonus"
+        generic_upkeep: "$country_power_projection$ Upkeep"
+        resource_produces: "{resource} from $country_power_projection$"
+        resource_upkeep: "{resource} Upkeep of $country_power_projection$"
       political:
         generic_produces: "{category} Resource Gain"
         generic_upkeep: "{category} Upkeep"
@@ -173,6 +179,11 @@ languages:
       planet_districts_hab_mining: [ '$planet_districts_hab_mining$', structure ]
       planet_districts_hab_trade: [ '$planet_districts_hab_trade$', structure ]
       planet_districts_hab_leisure: [ '$planet_districts_hab_leisure$', structure ]
+      planet_districts_orders_demesne: [ '$planet_districts_orders_demesne$', structure ]
+
+      planet_districts_rw_generator: [ '$planet_districts_rw_generator$', structure ]
+      planet_districts_rw_farming: [ '$planet_districts_rw_farming$', structure ]
+      planet_districts_rw_replicator: [ '$planet_districts_rw_replicator$', structure ]
 
       planet_jobs: [ "£job£ Jobs", generic ]
       planet_jobs_productive: [ "Resource-Producing £job£ Jobs", generic ]
@@ -204,6 +215,9 @@ languages:
       planet_jobs_tec_cybernetics: [ '§ECyborg§! and §BRobot§! Pop £job£ Jobs', job_archetype ]
       planet_jobs_tec_biopsionic_embroidered: [ '§YEmbroidered§! Pop £job£ Jobs', job_archetype ]
       planet_jobs_tec_converged: [ '§YConverged§! Pop £job£ Jobs', job_archetype ]
+
+      planet_jobs_tec_main_species: ['Main Species £job£ Jobs', job_archetype ]
+      planet_jobs_tec_xeno_species: ['Xeno Species £job£ Jobs', job_archetype ]
 
       planet_pops: ['£pop£ Pops', pop]
       planet_pop_assemblers: [ 'Pop Assembly', assembler ]
@@ -260,7 +274,7 @@ languages:
       planet_tec_integrated: [ '$planet_tec_integrated$', job ]
 
       planet_jobs_tec_prime_drone: [ '£job£ §BPrime Drones§!', job ]
-      planet_jobs_tec_brood_drone: [ '£job£ HBrood Drones§!', job ]
+      planet_jobs_tec_brood_drone: [ '£job£ §HBrood Drones§!', job ]
 
       planet_tec_network_drones: [ '£job_tec_network_drone£ $job_tec_network_drone_plural$', job ]
       planet_maintenancedrones: [ '£job_maintenance_drone£ $job_maintenance_drone_plural$', job ]
@@ -324,9 +338,9 @@ languages:
       country_traditions: ['', country]
       country_ruler: ['', country]
       country_ethic: ['', country]
-      country_power_projection: ['', country]
       country_first_league_homeworld: ['', country]
 
+      country_power_projection: ['', power_projection]
 
       pop_factions: ['Faction', political]
       federation: ['Federation', political]
