Added new eco categories localization

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -110,6 +110,13 @@ languages:
         resource_produces: "Monthly {resource}"
         resource_upkeep: "Monthly {resource} Upkeep"
         resource_cost: "Empire {resource} Costs"
+      country_when:
+        generic_produces: "Empire Output When {0}"
+        generic_upkeep: "Monthly Upkeep When {0}"
+        generic_cost: "Empire Costs When {0}"
+        resource_produces: "Monthly {resource} When {0}"
+        resource_upkeep: "Monthly {resource} Upkeep When {0}"
+        resource_cost: "Empire {resource} Costs When {0}"
       power_projection:
         generic_produces: "$country_power_projection$ Bonus"
         generic_upkeep: "$country_power_projection$ Upkeep"
@@ -273,6 +280,8 @@ languages:
       planet_tec_free_agents: [ '$planet_tec_free_agents$', job ]
       planet_tec_integrated: [ '$planet_tec_integrated$', job ]
 
+      planet_tec_state_workers: ['£job_tec_state_worker£ $job_tec_state_worker_plural$', job]
+
       planet_jobs_tec_prime_drone: [ '£job£ §BPrime Drones§!', job ]
       planet_jobs_tec_brood_drone: [ '£job£ §HBrood Drones§!', job ]
 
@@ -341,6 +350,9 @@ languages:
       country_first_league_homeworld: ['', country]
 
       country_power_projection: ['', power_projection]
+
+      country_tec_at_war: ['', country_when, "At War"]
+      country_tec_at_peace: ['', country_when, "At Peace"]
 
       pop_factions: ['Faction', political]
       federation: ['Federation', political]
