Ai auth expereience system, adjusted more starting events, fixed some scripted empires, adjusted game rules and added ai auth cuis

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -226,14 +226,29 @@ languages:
       planet_jobs_tec_main_species: ['Main Species £job£ Jobs', job_archetype ]
       planet_jobs_tec_xeno_species: ['Xeno Species £job£ Jobs', job_archetype ]
 
+
+      planet_jobs_organic_slave: [ "§YOrganic§! $pop_cat_slave$ Pop £job£ Jobs", job_strata ]
+      planet_jobs_organic_worker: [ "§YOrganic§! [GetWorker] Pop £job£ Jobs", job_strata ]
+      planet_jobs_organic_specialist: [ "§YOrganic§! [GetSpecialist] Pop £job£ Jobs", job_strata ]
+      planet_jobs_organic_ruler: [ "§YOrganic§! $pop_cat_ruler$ Pop £job£ Jobs", job_strata ]
+      planet_jobs_organic_simple_drone: [ "§YOrganic§! $pop_cat_simple_drone$ Pop £job£ Jobs", job_strata ]
+      planet_jobs_organic_complex_drone: [ "§YOrganic§! $pop_cat_complex_drone$ Pop £job£ Jobs", job_strata ]
+
+      planet_jobs_robotic_slave: [ "§BRobot§! $pop_cat_slave$ Pop £job£ Jobs", job_strata ]
+      planet_jobs_robotic_worker: [ "§BRobot§! [GetWorker] Pop £job£ Jobs", job_strata ]
+      planet_jobs_robotic_specialist: [ "§BRobot§! [GetSpecialist] Pop £job£ Jobs", job_strata ]
+      planet_jobs_robotic_ruler: [ "§BRobot§! $pop_cat_ruler$ Pop £job£ Jobs", job_strata ]
+      planet_jobs_robotic_simple_drone: [ "§BRobot§! $pop_cat_simple_drone$ Pop £job£ Jobs", job_strata ]
+      planet_jobs_robotic_complex_drone: [ "§BRobot§! $pop_cat_complex_drone$ Pop £job£ Jobs", job_strata ]
+
       planet_pops: ['£pop£ Pops', pop]
       planet_pop_assemblers: [ 'Pop Assembly', assembler ]
 
       planet_pops_unemployed: [ 'Unemployed £pop£ Pops', pop ]
-      planet_pops_robotics: [ 'Robot £pop£ Pops', pop ]
-      planet_pops_cyborgs: [ 'Cyborg £pop£ Pops', pop ]
-      planet_pops_psionic: [ 'Psionic £pop£ Pops', pop ]
-      planet_pops_organics: [ 'Organic £pop£ Pops', pop ]
+      planet_pops_robotics: [ '§BRobot§! £pop£ Pops', pop ]
+      planet_pops_cyborgs: [ '§BCyborg§! £pop£ Pops', pop ]
+      planet_pops_psionic: [ '§PPsionic§! £pop£ Pops', pop ]
+      planet_pops_organics: [ '§YOrganic§! £pop£ Pops', pop ]
       planet_pops_lithoids: [ 'Lithoid £pop£ Pops', pop ]
       planet_pops_bioservant: [ '§GBioservant§! £pop£ Pops', pop ]
       planet_pops_replicant: [ '§BReplicant§! £pop£ Pops', pop ]
@@ -311,6 +326,20 @@ languages:
       pop_category_assimilation_resources: [ 'Assimilated £pop£ Pops', pop_category ]
       pop_category_non_slave_resources: ['Non-Slave £pop£ Pops', pop_category]
 
+      
+      pop_category_psionic_slave: [ '§PPsionic§! $SLAVES$', pop_category ]
+      pop_category_psionic_workers: [ '§PPsionic§! $WORKERS$', pop_category ]
+      pop_category_psionic_specialists: [ '§PPsionic§! $SPECIALISTS$', pop_category ]
+      pop_category_psionic_rulers: [ '§PPsionic§! $RULERS$', pop_category ]
+
+      pop_category_latent_psionic_slave: [ '§PLatent Psionic§! $SLAVES$', pop_category ]
+      pop_category_latent_psionic_workers: [ '§PLatent Psionic§! $WORKERS$', pop_category ]
+      pop_category_latent_psionic_specialists: [ '§PLatent Psionic§! $SPECIALISTS$', pop_category ]
+      pop_category_latent_psionic_rulers: [ '§PLatent Psionic§! $RULERS$', pop_category ]
+
+      pop_category_complex_drones: [ '$pop_cat_complex_drone$ Pops', pop_category]
+      pop_category_simple_drones: [ '$pop_cat_simple_drone$ Pops', pop_category]
+
       unemployment_resources: ['$UNEMPLOYED_POPS$', job]
 
       planet_deposits: ['Deposits', job]
@@ -324,6 +353,22 @@ languages:
       leader_generals: ["General", leader]
       leader_scientists: ["Scientist", leader]
       leader_governors: ["Governor", leader]
+      leader_envoys: ["Envoy", leader]
+
+
+      leaders_rulers: ["Ruler", leader]
+      leaders_councilors: ["Councilor", leader]
+      leaders_tec_ai_node: ["AI Node", leader]
+      leaders_tec_ai_ruler_nodes: ["AI Ruler Node", leader]
+      leaders_tec_ai_councilor_nodes: ["AI Councilor Node", leader]
+      leaders_tec_ai_planetary_nodes: ["AI Planetary Node", leader]
+      leaders_tec_ai_idle_nodes: ["AI Idle Node", leader]
+      leaders_tec_idle: ["Idle Leader", leader]
+
+      leader_admirals_psionic: ["§PPsionic§! Admiral", leader]
+      leader_generals_psionic: ["§PPsionic§! General", leader]
+      leader_scientists_psionic: ["§PPsionic§! Scientist", leader]
+      leader_governors_psionic: ["§PPsionic§! Governor", leader]
 
       diplomacy: ['Diplomacy', diplomacy]
 
