More placeholders to reduce log errors

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -355,6 +355,8 @@ languages:
       leader_governors: ["Governor", leader]
       leader_envoys: ["Envoy", leader]
 
+      leaders_resource: ["Leader", leader]
+
 
       leaders_rulers: ["Ruler", leader]
       leaders_councilors: ["Councilor", leader]
