More ethic/authority tooltip standardization

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -144,8 +144,9 @@ languages:
       station_observer_missions: ['Observation Missions', generic]
       starbases: ['Starbase', structure]
       starbase_stations: ['Starbase', structure]
+      megastructures: ["Megastructure", megastructure]
       megastructures_habitat: ['Habitat', megastructure]
-      tec_protoworlds: ['Habitat', megastructure]
+      megastructures_protoworlds: ['Protoworld', megastructure]
 
       starbase_constructions: ['Starbase Constructions', starbase_construction]
       starbase_buildings: ['Starbase Buildings', starbase_construction]
@@ -429,6 +430,7 @@ languages:
       decisions_arcologies: ["Arcology Decisions", decisions]
       decisions_ecoworld: ["Ecoworld Decisions", decisions]
       decisions_ecu: ["Ecumenopolis Decisions", decisions]
+
 
     districts_and_buildings:
       district_tec_hab_arcology_industry: ["$district_tec_hab_arcology_industry$", building_generic]
