--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -349,24 +349,25 @@ languages:
       deposit_blockers: ['Clear Blocker', terraforming]
 
       armies: ["Army", army]
+
       leaders: ["Leader", leader]
-      leader_admirals: ["Admiral", leader]
-      leader_generals: ["General", leader]
-      leader_scientists: ["Scientist", leader]
-      leader_governors: ["Governor", leader]
+      leader_admirals: ["$admiral_with_icon$", leader]
+      leader_generals: ["$general_with_icon$", leader]
+      leader_scientists: ["$scientist_with_icon$", leader]
+      leader_governors: ["$governor_with_icon$", leader]
       leader_envoys: ["Envoy", leader]
 
       leaders_resources: ["Leader", leader]
 
 
-      leaders_rulers: ["Ruler", leader]
-      leaders_councilors: ["Councilor", leader]
-      leaders_tec_ai_node: ["AI Node", leader]
-      leaders_tec_ai_ruler_nodes: ["AI Ruler Node", leader]
-      leaders_tec_ai_councilor_nodes: ["AI Councilor Node", leader]
-      leaders_tec_ai_planetary_nodes: ["AI Planetary Node", leader]
-      leaders_tec_ai_idle_nodes: ["AI Idle Node", leader]
-      leaders_tec_idle: ["Idle Leader", leader]
+      leaders_rulers: ["$tec_loc_ruler$", leader]
+      leaders_councilors: ["$tec_loc_councilor$", leader]
+      leaders_tec_ai_node: ["$tec_loc_ai_node$", leader]
+      leaders_tec_ai_ruler_nodes: ["$tec_loc_ai_ruler_node$", leader]
+      leaders_tec_ai_councilor_nodes: ["$tec_loc_ai_councilor_node$", leader]
+      leaders_tec_ai_planetary_nodes: ["$tec_loc_ai_planetary_node$", leader]
+      leaders_tec_ai_idle_nodes: ["$tec_loc_ai_idle_node$", leader]
+      leaders_tec_idle: ["$tec_loc_idle_leader$", leader]
 
       leader_admirals_psionic: ["§PPsionic§! Admiral", leader]
       leader_generals_psionic: ["§PPsionic§! General", leader]
