Effects for councilors

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -311,6 +311,7 @@ languages:
       planet_tec_batteries: [ '£job_organic_battery£ $job_organic_battery_plural$', job ]
 
       planet_tec_labour_heroes: ['£job_labour_hero£ $job_labour_hero_plural$', job ]
+      planet_tec_transcends: ['£job_transcend£ $job_transcend_plural$', job]
 
       pop_category_purge: [ 'Purged Pops', pop_category ]
       pop_category_robot: [ 'Robotic Servants', pop_category ]
