Druids and occultists councilors and eco category

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -312,6 +312,8 @@ languages:
 
       planet_tec_labour_heroes: ['£job_labour_hero£ $job_labour_hero_plural$', job ]
       planet_tec_transcends: ['£job_transcend£ $job_transcend_plural$', job]
+      planet_tec_occultists: ['£job_tec_grand_occultist£ $job_tec_grand_occultist_plural$ and £job_tec_minor_occultist£ $job_tec_minor_occultist_plural$', job]
+      planet_tec_druid: ['£job_druid£ $job_druid_plural$', job]
 
       pop_category_purge: [ 'Purged Pops', pop_category ]
       pop_category_robot: [ 'Robotic Servants', pop_category ]
@@ -473,8 +475,4 @@ languages:
       building_tec_energrid_1: ["$building_tec_energrid_1$", building_generic]
       building_tec_stripmine_1: ["$building_tec_stripmine_1$", building_generic]
       building_hydroponics_farm: ["$building_hydroponics_farm$", building_generic]
-      building_stronghold: ["$building_stronghold$", building_generic]
-      building_tec_dread_stronghold: ["$building_tec_dread_stronghold$", building_generic]
-      building_tec_naval_academy: ["$building_tec_naval_academy$", building_generic]
-      building_tec_naval_gestalt: ["$building_tec_naval_gestalt$", building_generic]
 
