Some locs modernized

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -22,6 +22,7 @@ resources:
   - [amenities, "$tec_loc_amenities$", [produces_add]]
   - [stability, "$tec_loc_stability$", [produces_add]]
   - [trade_value, "$tec_loc_trade_value$", [produces_add]]
+  - [edict_funds, "$tec_loc_edict_funds$", [produces_add]]
   - [pop_growth, "$tec_loc_pop_growth$", [produces_mult]]
   - [biological_assembly, "$tec_loc_biological_assembly$", [produces_add, produces_mult]]
   - [assembly, "$tec_loc_assembly$", [produces_add, produces_mult]]
@@ -298,7 +299,7 @@ languages:
 
       planet_tec_state_workers: ['£job_tec_state_worker£ $job_tec_state_worker_plural$', job]
 
-      planet_jobs_tec_prime_drone: [ '£job£ §BPrime Drones§!', job ]
+      planet_jobs_tec_prime_drone: [ '£job_tec_prime_drone£ §BPrime Drones§!', job ]
       planet_jobs_tec_brood_drone: [ '£job£ §HBrood Drones§!', job ]
 
       planet_tec_network_drones: [ '£job_tec_network_drone£ $job_tec_network_drone_plural$', job ]
