--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -314,7 +314,11 @@ languages:
       planet_tec_labour_heroes: ['£job_labour_hero£ $job_labour_hero_plural$', job ]
       planet_tec_transcends: ['£job_transcend£ $job_transcend_plural$', job]
       planet_tec_occultists: ['£job_tec_grand_occultist£ $job_tec_grand_occultist_plural$ and £job_tec_minor_occultist£ $job_tec_minor_occultist_plural$', job]
-      planet_tec_druid: ['£job_druid£ $job_druid_plural$', job]
+      planet_tec_druids: ['£job_druid£ $job_druid_plural$', job]
+      planet_tec_necromancers: ['£job_necromancer£ $job_necromancer_plural$', job]
+      planet_bath_attendants: ['£job_bath_attendant£ $job_bath_attendant_plural$', job]
+      planet_bath_attendants_hive: ['£job_bath_attendant_hive£ $job_bath_attendant_hive_plural$', job]
+      planet_bath_attendants_machine: ['£job_bath_attendant_machine£ $job_bath_attendant_machine_plural$', job]
 
       pop_category_purge: [ 'Purged Pops', pop_category ]
       pop_category_robot: [ 'Robotic Servants', pop_category ]
