Finished tech weights

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -643,6 +643,8 @@ languages:
       tec_development_drone: [job_add_generic, evaluator]
       tec_nanite_researcher_drone: [job_add_generic, tec_nanite_researcher]
       tec_nurturer_drone: [job_add_generic]
+      # other
+      ai_unobtainium: [job_add_generic]
 
 missing_sprites: # paste log errors here with missing modified icons, preferably remove after to not regen in case these sprites are added
   default: gfx/interface/icons/modifiers/mod_unknown.dds
