Experimental ship changes

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -249,7 +249,7 @@ languages:
       planet_pops_unemployed: [ 'Unemployed £pop£ Pops', pop ]
       planet_pops_robotics: [ '§BRobot§! £pop£ Pops', pop ]
       planet_pops_cyborgs: [ '§BCyborg§! £pop£ Pops', pop ]
-      planet_pops_psionic: [ '§PPsionic§! £pop£ Pops', pop ]
+      planet_pops_psionic: [ '§MPsionic§! £pop£ Pops', pop ]
       planet_pops_organics: [ '§YOrganic§! £pop£ Pops', pop ]
       planet_pops_lithoids: [ 'Lithoid £pop£ Pops', pop ]
       planet_pops_bioservant: [ '§GBioservant§! £pop£ Pops', pop ]
@@ -336,10 +336,10 @@ languages:
       pop_category_non_slave_resources: ['Non-Slave £pop£ Pops', pop_category]
 
       
-      pop_category_psionic_slave: [ '§PPsionic§! $SLAVES$', pop_category ]
-      pop_category_psionic_workers: [ '§PPsionic§! $WORKERS$', pop_category ]
-      pop_category_psionic_specialists: [ '§PPsionic§! $SPECIALISTS$', pop_category ]
-      pop_category_psionic_rulers: [ '§PPsionic§! $RULERS$', pop_category ]
+      pop_category_psionic_slave: [ '§MPsionic§! $SLAVES$', pop_category ]
+      pop_category_psionic_workers: [ '§MPsionic§! $WORKERS$', pop_category ]
+      pop_category_psionic_specialists: [ '§MPsionic§! $SPECIALISTS$', pop_category ]
+      pop_category_psionic_rulers: [ '§MPsionic§! $RULERS$', pop_category ]
 
       pop_category_latent_psionic_slave: [ '§PLatent Psionic§! $SLAVES$', pop_category ]
       pop_category_latent_psionic_workers: [ '§PLatent Psionic§! $WORKERS$', pop_category ]
@@ -377,10 +377,10 @@ languages:
       leaders_tec_ai_idle_nodes: ["$tec_loc_ai_idle_node$", leader]
       leaders_tec_idle: ["$tec_loc_idle_leader$", leader]
 
-      leader_admirals_psionic: ["§PPsionic§! Admiral", leader]
-      leader_generals_psionic: ["§PPsionic§! General", leader]
-      leader_scientists_psionic: ["§PPsionic§! Scientist", leader]
-      leader_governors_psionic: ["§PPsionic§! Governor", leader]
+      leader_admirals_psionic: ["§MPsionic§! Admiral", leader]
+      leader_generals_psionic: ["§MPsionic§! General", leader]
+      leader_scientists_psionic: ["§MPsionic§! Scientist", leader]
+      leader_governors_psionic: ["§MPsionic§! Governor", leader]
 
       diplomacy: ['Diplomacy', diplomacy]
 
