moar loc and prefix fixes

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -328,7 +328,7 @@ languages:
 
       planet_tec_batteries: [ '£job_organic_battery£ $job_organic_battery_plural$', job ]
 
-      planet_tec_labour_heroes: ['£job_labour_hero£ $job_labour_hero_plural$', job ]
+      planet_tec_labour_heroes: ['£job_tec_labour_hero£ $job_tec_labour_hero_plural$', job ]
       planet_tec_transcendents: ['£job_tec_transcendent£ $job_tec_transcendent_plural$', job]
       planet_tec_occultists: ['£job_tec_grand_occultist£ $job_tec_grand_occultist_plural$ and £job_tec_minor_occultist£ $job_tec_minor_occultist_plural$', job]
       planet_tec_druids: ['£job_tec_druid£ $job_tec_druid_plural$', job]
