--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -335,6 +335,8 @@ languages:
       planet_tec_grand_occultist: ['£job_tec_grand_occultist£ $job_tec_grand_occultist_plural$', job]
       planet_tec_druids: ['£job_tec_druid£ $job_tec_druid_plural$', job]
       planet_tec_necromancers: ['£job_necromancer£ $job_necromancer_plural$', job]
+      planet_tec_labrats: ['£job_tec_labrat£ $job_tec_labrat_plural$', job]
+      planet_tec_peasants: [ '£job_tec_peasant£ $job_tec_peasant_plural$', job ]
       planet_bath_attendants: ['£job_bath_attendant£ $job_bath_attendant_plural$', job]
       planet_bath_attendants_hive: ['£job_bath_attendant_hive£ $job_bath_attendant_hive_plural$', job]
       planet_bath_attendants_machine: ['£job_bath_attendant_machine£ $job_bath_attendant_machine_plural$', job]
