Fixing some small changes to 3.9, fixed stewards, now considered swaps of politicians x2, fixed a few inlines related to em, added trader effect type and abstracted effects to inlines, fixed clerk trickle up, fixed numismatic priest, added numismatic drone and now numismatic deal can be given to trade machines

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -634,6 +634,7 @@ languages:
       tec_shipyard_technician_drone: [job_add_generic, tec_shipyard_technician]
       tec_shipyard_engineer_drone: [job_add_generic, tec_shipyard_engineer]
       tec_trade_drone: [job_add_generic, tec_trade_specialist]
+      tec_numismatic_drone: [job_add_generic, tec_trade_specialist]
       tec_depth_drone: [job_add_generic]
       tec_reef_drone: [job_add_generic]
       tec_aqua_drone: [job_add_generic, angler]
