Added support for mdos to add swaps easily and placeholder generation

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -655,6 +655,36 @@ languages:
       # other
       ai_unobtainium: [job_add_generic]
 
+addons:
+  inlines:
+    - jobs/inline_evolved_healthcare
+    - jobs/inline_evolved_entertainer
+    - jobs/inline_evolved_enforcer
+    - jobs/inline_evolved_colonist
+    - jobs/inline_evolved_clerk
+    - jobs/inline_evolved_coordinator
+    - jobs/inline_evolved_soldier
+    - jobs/inline_evolved_maintenance_drone
+    - jobs/inline_evolved_patrol_drone
+    - jobs/inline_evolved_warrior_drone
+    - jobs/inline_evolved_researcher
+    - jobs/inline_evolved_researcher_swaps
+    - jobs/inline_evolved_priest
+    - jobs/inline_evolved_priest_swaps
+    - jobs/inline_evolved_politician_civic_swaps
+    - jobs/inline_evolved_executive_civic_swaps
+    - jobs/inline_evolved_maintenance_civic_hive_swaps
+    - jobs/inline_evolved_maintenance_civic_machine_swaps
+    - jobs/inline_evolved_prime_drone
+    - jobs/inline_evolved_synapse_civic_swaps
+    - jobs/inline_evolved_add_job_civic_hive
+    - jobs/inline_evolved_add_job_civic_machine
+    - jobs/inline_evolved_add_job_civic_regular
+    - jobs/inline_evolved_add_ruler_civic_regular
+  suffixes:
+    - serente
+    - modded_other
+
 missing_sprites: # paste log errors here with missing modified icons, preferably remove after to not regen in case these sprites are added
   default: gfx/interface/icons/modifiers/mod_unknown.dds
   errors: |-
