More compat inlines and some modifier overwrites for display purposes

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -693,7 +693,25 @@ addons:
     - capitals/inline_evolved_colony_habitat
     - capitals/inline_evolved_common_habitat_modifiers
     - capitals/inline_evolved_common_modifiers
+    - districts/type/inline_evolved_rural_farming
+    - districts/type/inline_evolved_rural_generator
+    - districts/type/inline_evolved_rural_mining
+    - districts/type/inline_evolved_trade
+    - districts/type/inline_evolved_housing_nexus
+    - districts/type/inline_evolved_housing_hive
+    - districts/type/inline_evolved_housing_habitat
+    - districts/type/inline_evolved_housing_generic
+    - districts/type/inline_evolved_housing_city
+    - districts/type/inline_evolved_housing_arcology
+    - modifiers/inline_evolved_rural_farming_district_build_speed
+    - modifiers/inline_evolved_rural_farming_district_max
+    - modifiers/inline_evolved_rural_generator_district_build_speed
+    - modifiers/inline_evolved_rural_generator_district_max
+    - modifiers/inline_evolved_rural_mining_district_build_speed
+    - modifiers/inline_evolved_rural_mining_district_max
   suffixes:
+    - giga_patch
+    - pd_patch
     - serente
     - modded_other
 
