More compat inlines for menials and typo fixes

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -709,6 +709,12 @@ addons:
     - modifiers/inline_evolved_rural_generator_district_max
     - modifiers/inline_evolved_rural_mining_district_build_speed
     - modifiers/inline_evolved_rural_mining_district_max
+    - jobs/inline_evolved_farmer
+    - jobs/inline_evolved_farmer_secondary
+    - jobs/inline_evolved_miner
+    - jobs/inline_evolved_miner_secondary
+    - jobs/inline_evolved_technician
+    - jobs/inline_evolved_technician_secondary
   suffixes:
     - giga_patch
     - pd_patch
