Hydrological extractor desiccation cost fix, protoworld double vd colonization fix, hydro zone reduce sdistricts given on hab

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -176,8 +176,8 @@ languages:
       starbase_society_research_modules: ['Social Observatories', starbase_construction]
       starbase_engineering_research_modules: ['Engineering Docks', starbase_construction]
 
-      terraforming: ['Terraforming', terraforming]
-      terraforming_ocean: ['Ocean Terraforming', terraforming]
+      terraforming: ['terraforming', terraforming]
+      terraforming_ocean: ['$terraforming_ocean$', terraforming]
 
       planets: ['Planetary', structure]
       planet_structures: [ 'Building and District', structure ]
