Ai auth leader upkeep fixes

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -391,6 +391,7 @@ languages:
 
       leaders_rulers: ["$tec_loc_ruler$", leader]
       leaders_councilors: ["$tec_loc_councilor$", leader]
+      leaders_tec_non_ai_node : ["[TecNonAiNodeLoc]", leader]
       leaders_tec_ai_node: ["$tec_loc_ai_node$", leader]
       leaders_tec_ai_ruler_nodes: ["$tec_loc_ai_ruler_node$", leader]
       leaders_tec_ai_councilor_nodes: ["$tec_loc_ai_councilor_node$", leader]
@@ -633,7 +634,7 @@ languages:
       tec_shipyard_technician_drone: [job_add_generic, tec_shipyard_technician]
       tec_shipyard_engineer_drone: [job_add_generic, tec_shipyard_engineer]
       tec_trade_drone: [job_add_generic, tec_trade_specialist]
-      tec_numismatic_drone: [job_add_generic, tec_trade_specialist]
+      tec_numismatic_drone: [job_add_generic, numistic_priest]
       tec_depth_drone: [job_add_generic]
       tec_reef_drone: [job_add_generic]
       tec_aqua_drone: [job_add_generic, angler]
